Buttonbar: fix extra margin (after refactoring buttonbar margins)

--- a/src/scss/themes/fylr/components/_tabs.scss
+++ b/src/scss/themes/fylr/components/_tabs.scss
@@ -194,6 +194,7 @@
 		// Override border color
 		.cui-buttonbar-group {
 			position: relative;
+			margin: 0;
 
 			.cui-tab-header-button {
 				.cui-button-visual {
